--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "DbmsApiTest",
+  "name": "DBMS-API-Test-with-Mocha-and-Chai",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "test": "npx mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abayh/DBMS-API-Test-with-Mocha-and-Chai.git"
+  },
   "keywords": [],
-  "author": "Abayh",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abayh/DBMS-API-Test-with-Mocha-and-Chai/issues"
+  },
+  "homepage": "https://github.com/abayh/DBMS-API-Test-with-Mocha-and-Chai#readme",
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
