--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/abayh/DBMS-API-Test-with-Mocha-and-Chai.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Abayh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/abayh/DBMS-API-Test-with-Mocha-and-Chai/issues"
